DuPont DevSB/src/objects/ConstructionPts__CP_Company__c.object
<CustomObject>
    <fields>
        <fullName>ConstructionPts__Account_Name__c</fullName>
        <description>Linked to Account Name</description>
        <formula>IF(!ISNULL(ConstructionPts__Account__c) &amp;&amp; (ConstructionPts__Account__c != &apos;&apos;), ConstructionPts__Account__r.Name, &apos;&apos;)</formula>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConstructionPts__Account_Owner__c</fullName>
        <description>Linked to Account Owner</description>
        <formula>IF(!ISNULL(ConstructionPts__Account__c) &amp;&amp; (ConstructionPts__Account__c != &apos;&apos;), ConstructionPts__Account__r.Owner.FirstName + &apos; &apos; + ConstructionPts__Account__r.Owner.LastName  , &apos;&apos;)</formula>
        <label>Account Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConstructionPts__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Linked to Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Dodge Companies</relationshipLabel>
        <relationshipName>CP_Companies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ConstructionPts__Address__c</fullName>
        <label>Address</label>
        <length>161</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConstructionPts__BatchID__c</fullName>
        <label>BatchID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ConstructionPts__CKMS_ID__c</fullName>
        <label>Dodge CKMS ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConstructionPts__City__c</fullName>
        <label>City</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConstructionPts__CompanyID__c</fullName>
        <externalId>true</externalId>
        <label>CompanyID</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ConstructionPts__Company_Report_URL__c</fullName>
        <label>CP Company URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>ConstructionPts__Company_key__c</fullName>
        <label>Dodge Company ID</label>
        <length>13</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConstructionPts__Country__c</fullName>
        <label>Country</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConstructionPts__County__c</fullName>
        <label>County</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConstructionPts__DUNS__c</fullName>
        <label>DUNS</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConstructionPts__Email__c</fullName>
        <label>Email</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConstructionPts__Fax_Number__c</fullName>
        <label>Fax Number</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConstructionPts__Latitude__c</fullName>
        <label>Latitude</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ConstructionPts__Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Linked to Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Dodge Companies</relationshipLabel>
        <relationshipName>CP_Companies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ConstructionPts__Linked_By_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Linked By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Dodge_Companies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ConstructionPts__Longitude__c</fullName>
        <label>Longitude</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ConstructionPts__Matched_By_Date__c</fullName>
        <label>Linked Date</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConstructionPts__Matched_By_UserId__c</fullName>
        <label>Linked By UserId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConstructionPts__Parent_DUNS__c</fullName>
        <label>Parent DUNS</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConstructionPts__Phone_Extension__c</fullName>
        <label>Phone Extension</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConstructionPts__Phone_Number__c</fullName>
        <label>Phone Number</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConstructionPts__Related_Contacts__c</fullName>
        <label>Contacts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ConstructionPts__Related_Projects__c</fullName>
        <label>Projects</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ConstructionPts__SIC_code12__c</fullName>
        <label>SIC Code</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConstructionPts__SIC_code__c</fullName>
        <label>SIC Code</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConstructionPts__SIC_code_description__c</fullName>
        <label>SIC Code Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConstructionPts__State__c</fullName>
        <label>State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConstructionPts__Website__c</fullName>
        <label>Website</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConstructionPts__Zipcode__c</fullName>
        <label>Zipcode</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_One_DuPont_SFID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This field is populated with the legacy One DuPont SF ID and was used during the split to map related records during the split and insert process to maintain the migrated record’s parent child record relationships.</description>
        <externalId>true</externalId>
        <inlineHelpText>This is the pre-split original 18 digit Salesforce ID of this record that came from the original One Dupont Salesforce instance before the business units were separated. Its is case sensitive and unique.</inlineHelpText>
        <label>Legacy One DuPont SFID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Dodge Company</label>
    <listViews>
        <fullName>ConstructionPts__All</fullName>
        <columns>NAME</columns>
        <columns>ConstructionPts__DUNS__c</columns>
        <columns>ConstructionPts__Account__c</columns>
        <columns>ConstructionPts__Lead__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>ConstructionPts__Address__c</columns>
        <columns>ConstructionPts__City__c</columns>
        <columns>ConstructionPts__County__c</columns>
        <columns>ConstructionPts__State__c</columns>
        <columns>ConstructionPts__Country__c</columns>
        <columns>ConstructionPts__Zipcode__c</columns>
        <columns>ConstructionPts__Phone_Number__c</columns>
        <columns>ConstructionPts__Phone_Extension__c</columns>
        <columns>ConstructionPts__Fax_Number__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Company Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dodge Companies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>